# Engine

./: .gitignore  CMakeLists.txt  Readme.md  run.bat  vcpkg.json
code/: CMakeLists.txt  main.cpp
code/Engine/: Engine.h
code/Engine/inc/: AABBComponent.h  AdvInput.h  BackgroundImage.h  Camera.h  Component.h  Engine.h  Entity .h  ForwardMovement.h  Frustum.h  FrustumReady.h  FrusutmCulling.h  Globals.h  Image.h  JsonReader.h  LineRenderer.h  Logger.h  Math.h  Mesh.h  Model.h  ProgressBar.h  RigPrep.h  Scene.h  SceneRenderer.h  ScoreNumbers.h  Shader.h  ThirdPersonCamera.h  Transform.h  Transform_old.h  assimp_glm_helpers.h
code/Engine/inc/AI/: State.h  StateMachine.h
code/Engine/inc/Animation/: AnimBone.h  Animation.h  Animator.h  Bone.h  InverseKinematics.h  LookAt.h
code/Engine/inc/Audio/: AudioManager.h  Sound.h
code/Engine/inc/Core/: Time.h
code/Engine/inc/Core/AssetManager/: Asset.h  AssetManager.h
code/Engine/inc/Core/Utils/: Ease.h  MathUtils.h  StringUtils.h
code/Engine/inc/Debug/: Gizmos.h  Logger.h  Profiler.h
code/Engine/inc/ECS/: Component.h  Entity.h  ScriptableEntity.h
code/Engine/inc/Editor/: Camera.h  Editor.h  Gizmos.h  YamlWriter.h
code/Engine/inc/Editor/Panels/: Console.h  FileDialog.h  Hierarchy.h  Inspector.h
code/Engine/inc/Generative-System/: AnimationRing.h  BadBall.h  BadOrb.h  Ball.h  Collectable.h  Drink.h  FootOrb.h  HandOrb.h  Ring.h  SongAnalizer.h  Spawner.h  SpawnerComponent.h
code/Engine/inc/HUD/: BackgroundImage.h  Button.h  Image.h  ProgressBar.h  ResizableImage.h
code/Engine/inc/Input/: DebugInput.h  Event.h  Input.cpp  Input.h  Key.h  PlayerInput.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h
code/Engine/inc/Light/: DirectionalLight.h  Light.h  LightManager.h  LightSource.h  PointLight.h  SpotLight.h
code/Engine/inc/Physics/: BallCollider.h  Collider.h  ColliderComponent.h  CollisionDetection.h  CollisionManager.h
code/Engine/inc/Physics/Colliders/: Collider.h  ColliderShapes.h
code/Engine/inc/Renderer/: FrameBuffer.h  InstancedRobots.h  Material.h  MaterialAsset.h  Renderable.h  Renderer.h  SSAO.cpp  SSAO.h  Texture.h
code/Engine/inc/Scene/: Scene.h  Scene2.h  SceneManager.h  Transform.h  Transform2.h
code/Engine/inc/Scene/Loader/: ISerializable.h  Reader.h  SceneLoader.h  YamlHelpers.h  YamlReader.h
code/Engine/inc/Script/: BaseSceneScript.h  DependencyContainer.h  SceneScript.h  calibrationSceneScript.h  creditsSceneScript.h  exampleSceneScript.h  loseSceneScript.h  menuSceneScript.h  pauseSceneScript.h  songSceneScript.h  winSceneScript.h
code/Engine/inc/Text/: Text.h
code/Engine/src/: Globals.cpp  JsonReader.cpp  Logger.cpp  Model.cpp  ThirdPersonCamera.cpp
code/Engine/src/AI/: StateMachine.cpp
code/Engine/src/Audio/: AudioManager.cpp  Sound.cpp
code/Engine/src/Core/: Time.cpp
code/Engine/src/Core/AssetManager/: AssetManager.cpp
code/Engine/src/Debug/: Gizmos.cpp  Logger.cpp  Profiler.cpp
code/Engine/src/ECS/: Component.cpp  Entity.cpp  ScriptableEntity.cpp
code/Engine/src/Editor/: Editor.cpp  Gizmos.cpp  YamlWriter.cpp
code/Engine/src/Editor/Panels/: Console.cpp  (+3 more)
code/Engine/src/Generative-System/: AnimationRing.cpp  BadOrb.cpp  Collectable.cpp  Drink.cpp  FootOrb.cpp  HandOrb.cpp  Ring.cpp  SongAnalizer.cpp  Spawner.cpp  SpawnerComponent.cpp
code/Engine/src/HUD/: Image.cpp
code/Engine/src/Light/: DirectionalLight.cpp  LightManager.cpp  LightSource.cpp  PointLight.cpp  SpotLight.cpp
code/Engine/src/Physics/: Collider.cpp  ColliderComponent.cpp  CollisionDetection.cpp  CollisionManager.cpp
code/Engine/src/Renderer/: FrameBuffer.cpp  InstancedRobots.cpp  Material.cpp  MaterialAsset.cpp  Renderer.cpp  Texture.cpp
code/Engine/src/Scene/: Scene.cpp  Scene2.cpp  SceneManager.cpp  Transform.cpp  Transform2.cpp
code/Engine/src/Text/: Text.cpp
(+176 files in other folders)
